cdk/cdk.out/NetworkStack.template.json
{
 "Resources": {
  "dungenbackendvpc1AA620BE": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "application",
      "Value": "dungen-backend"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/dungen-backend-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/Resource"
   }
  },
  "dungenbackendvpcdungenbackendprivatesubnetSubnet1Subnet21C12030": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "application",
      "Value": "dungen-backend"
     },
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "dungen-backend-privatesubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/dungen-backend-vpc/dungen-backend-privatesubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "dungenbackendvpc1AA620BE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-privatesubnetSubnet1/Subnet"
   }
  },
  "dungenbackendvpcdungenbackendprivatesubnetSubnet1RouteTable02E1464E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "application",
      "Value": "dungen-backend"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/dungen-backend-vpc/dungen-backend-privatesubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "dungenbackendvpc1AA620BE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-privatesubnetSubnet1/RouteTable"
   }
  },
  "dungenbackendvpcdungenbackendprivatesubnetSubnet1RouteTableAssociationFE6E4C10": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "dungenbackendvpcdungenbackendprivatesubnetSubnet1RouteTable02E1464E"
    },
    "SubnetId": {
     "Ref": "dungenbackendvpcdungenbackendprivatesubnetSubnet1Subnet21C12030"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-privatesubnetSubnet1/RouteTableAssociation"
   }
  },
  "dungenbackendvpcdungenbackendprivatesubnetSubnet1DefaultRouteEB943712": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "dungenbackendvpcdungenbackendpublicsubnetSubnet1NATGateway959D7377"
    },
    "RouteTableId": {
     "Ref": "dungenbackendvpcdungenbackendprivatesubnetSubnet1RouteTable02E1464E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-privatesubnetSubnet1/DefaultRoute"
   }
  },
  "dungenbackendvpcdungenbackendprivatesubnetSubnet2Subnet8C945825": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1c",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "application",
      "Value": "dungen-backend"
     },
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "dungen-backend-privatesubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/dungen-backend-vpc/dungen-backend-privatesubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "dungenbackendvpc1AA620BE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-privatesubnetSubnet2/Subnet"
   }
  },
  "dungenbackendvpcdungenbackendprivatesubnetSubnet2RouteTableAC1CC01D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "application",
      "Value": "dungen-backend"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/dungen-backend-vpc/dungen-backend-privatesubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "dungenbackendvpc1AA620BE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-privatesubnetSubnet2/RouteTable"
   }
  },
  "dungenbackendvpcdungenbackendprivatesubnetSubnet2RouteTableAssociationBA9374EA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "dungenbackendvpcdungenbackendprivatesubnetSubnet2RouteTableAC1CC01D"
    },
    "SubnetId": {
     "Ref": "dungenbackendvpcdungenbackendprivatesubnetSubnet2Subnet8C945825"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-privatesubnetSubnet2/RouteTableAssociation"
   }
  },
  "dungenbackendvpcdungenbackendprivatesubnetSubnet2DefaultRoute2B102D56": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "dungenbackendvpcdungenbackendpublicsubnetSubnet2NATGateway5C649775"
    },
    "RouteTableId": {
     "Ref": "dungenbackendvpcdungenbackendprivatesubnetSubnet2RouteTableAC1CC01D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-privatesubnetSubnet2/DefaultRoute"
   }
  },
  "dungenbackendvpcdungenbackendpublicsubnetSubnet1SubnetFF93512A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "application",
      "Value": "dungen-backend"
     },
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "dungen-backend-publicsubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "dungenbackendvpc1AA620BE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet1/Subnet"
   }
  },
  "dungenbackendvpcdungenbackendpublicsubnetSubnet1RouteTable54BABB28": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "application",
      "Value": "dungen-backend"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "dungenbackendvpc1AA620BE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet1/RouteTable"
   }
  },
  "dungenbackendvpcdungenbackendpublicsubnetSubnet1RouteTableAssociation6F6C6CF5": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "dungenbackendvpcdungenbackendpublicsubnetSubnet1RouteTable54BABB28"
    },
    "SubnetId": {
     "Ref": "dungenbackendvpcdungenbackendpublicsubnetSubnet1SubnetFF93512A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet1/RouteTableAssociation"
   }
  },
  "dungenbackendvpcdungenbackendpublicsubnetSubnet1DefaultRoute9218C1EC": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "dungenbackendvpcIGW3505FE9B"
    },
    "RouteTableId": {
     "Ref": "dungenbackendvpcdungenbackendpublicsubnetSubnet1RouteTable54BABB28"
    }
   },
   "DependsOn": [
    "dungenbackendvpcVPCGW3C75031F"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet1/DefaultRoute"
   }
  },
  "dungenbackendvpcdungenbackendpublicsubnetSubnet1EIP1F74F89D": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "application",
      "Value": "dungen-backend"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet1/EIP"
   }
  },
  "dungenbackendvpcdungenbackendpublicsubnetSubnet1NATGateway959D7377": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "dungenbackendvpcdungenbackendpublicsubnetSubnet1EIP1F74F89D",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "dungenbackendvpcdungenbackendpublicsubnetSubnet1SubnetFF93512A"
    },
    "Tags": [
     {
      "Key": "application",
      "Value": "dungen-backend"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet1"
     }
    ]
   },
   "DependsOn": [
    "dungenbackendvpcdungenbackendpublicsubnetSubnet1DefaultRoute9218C1EC",
    "dungenbackendvpcdungenbackendpublicsubnetSubnet1RouteTableAssociation6F6C6CF5"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet1/NATGateway"
   }
  },
  "dungenbackendvpcdungenbackendpublicsubnetSubnet2SubnetB7B02574": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1c",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "application",
      "Value": "dungen-backend"
     },
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "dungen-backend-publicsubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "dungenbackendvpc1AA620BE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet2/Subnet"
   }
  },
  "dungenbackendvpcdungenbackendpublicsubnetSubnet2RouteTableB8C3C942": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "application",
      "Value": "dungen-backend"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "dungenbackendvpc1AA620BE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet2/RouteTable"
   }
  },
  "dungenbackendvpcdungenbackendpublicsubnetSubnet2RouteTableAssociation81582C5F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "dungenbackendvpcdungenbackendpublicsubnetSubnet2RouteTableB8C3C942"
    },
    "SubnetId": {
     "Ref": "dungenbackendvpcdungenbackendpublicsubnetSubnet2SubnetB7B02574"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet2/RouteTableAssociation"
   }
  },
  "dungenbackendvpcdungenbackendpublicsubnetSubnet2DefaultRouteE2BB45B6": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "dungenbackendvpcIGW3505FE9B"
    },
    "RouteTableId": {
     "Ref": "dungenbackendvpcdungenbackendpublicsubnetSubnet2RouteTableB8C3C942"
    }
   },
   "DependsOn": [
    "dungenbackendvpcVPCGW3C75031F"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet2/DefaultRoute"
   }
  },
  "dungenbackendvpcdungenbackendpublicsubnetSubnet2EIP7D7579A3": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "application",
      "Value": "dungen-backend"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet2/EIP"
   }
  },
  "dungenbackendvpcdungenbackendpublicsubnetSubnet2NATGateway5C649775": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "dungenbackendvpcdungenbackendpublicsubnetSubnet2EIP7D7579A3",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "dungenbackendvpcdungenbackendpublicsubnetSubnet2SubnetB7B02574"
    },
    "Tags": [
     {
      "Key": "application",
      "Value": "dungen-backend"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet2"
     }
    ]
   },
   "DependsOn": [
    "dungenbackendvpcdungenbackendpublicsubnetSubnet2DefaultRouteE2BB45B6",
    "dungenbackendvpcdungenbackendpublicsubnetSubnet2RouteTableAssociation81582C5F"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/dungen-backend-publicsubnetSubnet2/NATGateway"
   }
  },
  "dungenbackendvpcIGW3505FE9B": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "application",
      "Value": "dungen-backend"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/dungen-backend-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/IGW"
   }
  },
  "dungenbackendvpcVPCGW3C75031F": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "dungenbackendvpcIGW3505FE9B"
    },
    "VpcId": {
     "Ref": "dungenbackendvpc1AA620BE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/dungen-backend-vpc/VPCGW"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/02OSw+CMBCEfwv3UoWoiUdCjOFiGjBcTSlrLI/W0C3EEP67xReedubLZGdCut/StccH44uy9htZ0DFDLmri0AVESMf8Lkh8VTmLCetkzxEyWyjAGS4q1RbhzIsGFr6wyBgtJEep1S9MmC0aKZYXh4TN58Tx6EoG/phdohA6F/hDbsnHReim3lpQOJEUjLadeNV/9USULoFWZtUHGxrsaOBVRkq/swplCzR93yeThoBzBQEAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ExportsOutputRefdungenbackendvpc1AA620BE7AD60293": {
   "Value": {
    "Ref": "dungenbackendvpc1AA620BE"
   },
   "Export": {
    "Name": "NetworkStack:ExportsOutputRefdungenbackendvpc1AA620BE7AD60293"
   }
  },
  "ExportsOutputRefdungenbackendvpcdungenbackendprivatesubnetSubnet1Subnet21C12030BD5EF4B2": {
   "Value": {
    "Ref": "dungenbackendvpcdungenbackendprivatesubnetSubnet1Subnet21C12030"
   },
   "Export": {
    "Name": "NetworkStack:ExportsOutputRefdungenbackendvpcdungenbackendprivatesubnetSubnet1Subnet21C12030BD5EF4B2"
   }
  },
  "ExportsOutputRefdungenbackendvpcdungenbackendprivatesubnetSubnet2Subnet8C945825B6792C1C": {
   "Value": {
    "Ref": "dungenbackendvpcdungenbackendprivatesubnetSubnet2Subnet8C945825"
   },
   "Export": {
    "Name": "NetworkStack:ExportsOutputRefdungenbackendvpcdungenbackendprivatesubnetSubnet2Subnet8C945825B6792C1C"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
